--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,13 +15,13 @@
                             <div class='game-box'> <%= "#{game.id} status: #{game.status}"%>
                                 <div id='game-box-content'>
                                     <p>
-                                        <%= link_to "Manage game", new_game_participant_path(game.id), class: 'btn btn-primary' %>
+                                        <%= link_to "Manage game", new_game_invitation_path(game.id), class: 'btn btn-primary' %>
                                     </p>
                                     
                                     <% if game.participants %>
                                         <ul class='list-group'>
-                                            <% game.participants.includes(:player).each do |participant| %>
-                                                <li class="list-group-item"><%= participant.player.name %></li>
+                                            <% game.participants.includes(:user).each do |participant| %>
+                                                <li class="list-group-item"><%= participant.user.nickname %></li>
                                             <% end %>
                                         </ul>
                                     <% end %>
