--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,2 +1,12 @@
-<body>
-</body>
+<div class="container">
+    <%= render partial: "shared/errors", locals: {instance: @form} %>
+    <div class='col-md-6 col-md-offset-3'>  
+        <%= form_tag games_path do %>
+            <div class="form_group">
+                <%= label_tag :title, "title", class: 'label' %><br>
+                <%= text_field_tag :title, nil, placeholder: "title...", class: 'form-control' %> <br>      
+                <%= submit_tag :submit , class: 'btn btn-success' %>
+            </div>
+        <% end %>
+    </div>
+</div>
