--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
                     <div id='game-box-content'>
                         <div class='row'>
                             <div class="col-md-6 text center">
-                                <%= game.id %> <br>
+                                <%= "<id: #{game.id} >"%> <br>
                                 <%= game.title %>
                             </div>
                             <div class="col-md-6 text center">
