--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -1,3 +1,25 @@
 <div class='container-flud'>
+   <%= render partial: "shared/errors", locals: {instance: @form} %>
+
+   <%= link_to "Back", user_path(current_user), class: 'btn btn-success'%>
+   <%= link_to "Invite player", new_game_invitation_path(@game), class: 'btn btn-success'%>
+        
+        <% if @game.participants %>
+                <% @game.participants.includes(:user).each do |participant| %>
+                        <div class="row">
+                            <div style="background-color:#EEE" class="col-md-4 text-justify">
+                                <strong><%= participant.user.nickname %></strong>
+                            </div>
+                            <% if participant[:game_master] == false %>
+                                <div style="background-color:#EEE" class='col-md-1 text-center'>
+                                    <%= Invitation.where(user_id: participant.user.id, game_id: @game.id).last.status %>
+                                </div>
+                                <div class="col-md-1 text-center">
+                                    <%= link_to "Delete", game_participant_path(@game,participant), method: :delete, class: 'btn btn-danger' %>
+                                </div> 
+                            <% end %>
+                        </div>
+                <% end %>
+        <% end %>
     <%= link_to "Start game", game_path, method: :put, class: 'btn btn-success' %>
 </div>
