--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,30 @@
-<% if @games %>
-    <% @games.each do |game| %>
-        <div class='game-box'> <%= "#{game.id} status: #{game.status}"%>
-            <div id='game-box-content'>
-                <p>
-                    <%= link_to "Manage game", new_game_participant_path(game.id), class: 'btn btn-primary' %>
-                </p>
-                
-                <% if game.participants %>
-                    <ul class='list-group'>
-                        <% game.participants.includes(:user).each do |participant| %>
-                            <li class="list-group-item"><%= participant.user.nickname %></li>
-                        <% end %>
-                    </ul>
-                <% end %>
-                
-                <p class='status'> <%= "#{game.status}" %> </p>
-                <div>
-                    <div class="col-md-1 text-center"><%= link_to "Delete", game_path(game), method: :delete, class: 'btn btn-danger' %></div>
-                </div>                                     
-            </div>
-        </div>
-    <% end %>  
-<% end %>
+<%= render partial: "layouts/navbar" %>
+
+<div class="container-fluid">
+    <div class='col-md-6 col-md-offset-3'>
+        <% if @games %>
+            <% @games.each do |game| %>
+                    <div id='game-box-content'>
+                        <div class='row'>
+                            <div class="col-md-6 text center">
+                                <%= "<id: #{game.id} >"%> <br>
+                                <%= game.title %>
+                            </div>
+                            <% if Participant.find_by(user_id: current_user.id, game_id: game.id).game_master == true %>
+                            <% binding.pry %>
+                                <div class="col-md-6 text center">
+                                    <%= link_to "Manage game", edit_game_path(game.id), class: 'btn btn-primary' %>
+                                </div>
+                                <div class="col-md-1 text-center"><%= link_to "Delete", game_path(game),
+                                    method: :delete, class: 'btn btn-danger' %></div>    
+                                </div>
+                            <% end %>
+                        </div>
+                        <p class='status'> <%= "#{game.status}" %> </p>                                
+                    </div>
+                </div>
+            <% end %>  
+        <% end %>
+        <div><%= link_to "New game", new_game_path, class: 'btn btn-primary' %></div>
+    </div>
+</div>
